# ATRParser

./: BUILD_INSTRUCTIONS.md  CMakeLists.txt  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  atrparser.cpp  atrparser.h  atrparser.pro  atrparser_console.pro  atrparser_gui.pro  cardreader.cpp  cardreader.h  console_example.cpp  main.cpp
